--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,6 +5,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
         <meta name="description" content="A product of emergent.sh" />
+         <!-- SEO Meta Tags -->
+        <meta name="robots" content="index, follow" />
+        <meta name="keywords" content="kviz, edukacija, značke, kvizmajstor, online testovi" />
+        <meta name="author" content="KvizMajstor Team" />
+        <meta property="og:title" content="KvizMajstor – Igraj i uči!" />
+        <meta property="og:description" content="Modularna platforma za edukaciju kroz kvizove, značke i zabavne avatare." />
+        <meta property="og:url" content="https://kvizmajstor.vercel.app/" />
+        <meta property="og:image" content="%PUBLIC_URL%/og-image.png" />
+
+
         <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
