Update meta description for SEO enhancement

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
-        <meta name="description" content="A product of emergent.sh" />
+        <meta name="description" content="KvizMajstor – edukativna platforma sa kvizovima, značkama i avatarima. Igraj, uči i osvajaj!" />
         <meta name="google-site-verification" content="TRhzMn8fX6tlqdHxHie6x9OxQ5gBWM5uKHriGIxjlBA" />
          <!-- SEO Meta Tags -->
         <meta name="robots" content="index, follow" />
