Change og:image meta tag to absolute URL
Updated Open Graph image URL to use absolute path.

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -13,7 +13,7 @@
         <meta property="og:title" content="KvizMajstor – Igraj i uči!" />
         <meta property="og:description" content="Modularna platforma za edukaciju kroz kvizove, značke i zabavne avatare." />
         <meta property="og:url" content="https://kvizmajstor.vercel.app/" />
-        <meta property="og:image" content="%PUBLIC_URL%/og-image.png" />
+        <meta property="og:image" content="https://kvizmajstor.vercel.app/og-image.png" />
         
         <!--
       manifest.json provides metadata used when your web app is installed on a
