Add Google site verification meta tag

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,7 +14,7 @@
         <meta property="og:description" content="Modularna platforma za edukaciju kroz kvizove, značke i zabavne avatare." />
         <meta property="og:url" content="https://kvizmajstor.vercel.app/" />
         <meta property="og:image" content="https://kvizmajstor.vercel.app/og-image.png" />
-        
+        <meta name="google-site-verification" content="mT3EOMWTOrBKczlsh8M_jHT9KgzAZvu_waWDaQWeeMY" />
         <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
